8229797: [JVMCI] Clean up no longer used JVMCI::dependencies_invalid value

Co-authored-by: Xiaohong Gong <xiaohong.gong@arm.com>
Reviewed-by: dlong, coleenp